style.css
/*Barra de navegaciom*/

.navbar{
    padding: 2rem;
    background-color: #f5f6f7 ;
}

.navbar-collapse{
    align-items: center;
    justify-content: space-between;
}

/* Estilos generales */

section{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1{
    font-size: 2.5rem;
    font-family: 'Rubik Dirt', cursive;
}

.seccion-oscura {
    color: white;
    background-color: #1b1b32;
}

.seccion-clara{
    color: black;
    background-color: white;
}

.seccion-titulo{
    font-size: 2rem;
    padding: 15px 0;
    font-family: 'Rubik Dirt', cursive;
}

.seccion-descripcion{
    font-size: 1.2rem;
    color: #584e4e;
}

.seccion-texto{
    font-size: 1.2rem;
}

.texto-negro{
    color: black;
}

.text-blanco{
    color: white;
}


/*Seccion Hero*/
.hero{
    background-color: #f5f6f7;
    min-height: 450px;
    text-align: center;

}

.hero-principal{
    padding: 3rem;
}

.hero-imagen-desarrollador{
    width: 200px;
    height: 200px;
    border-radius: 50%;
    margin: 20px;
}

.hero-principal h2{
    font-size: 1.5rem;
    color: #615151;
}

h1{
   font-size: 2.5rem; 
   font-family: 'Rubik Dirt', cursive;
}

.seccion-oscura{
    color: white;
    background-color: #1b1b32;
}

/* Sobre mi*/

.sobre-mi{
    height: 500px;
    padding: 10px;
}

.sobre-mi .contenedor{
    max-width: 600px;
    text-align: center;
}

/* Experiencia */

.experiencia{
    padding: 40px 40px 60px 40px;
}

.experiencia .columna{
    padding: 20px;
    border: 2px  solid #8080804d;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    transition: all 0.2s ease-in;
}

.experiencia .columna:hover{
    color: white;
    background-color: #1b1b32;
}

.experiencia i  {
    font-size: 2.5rem;
    color:#7ade30;
    background-color: #0a0a23;
    padding: 8px 19px;
    border-radius: 50%;
}

.experiencia-titulo {
    font-size: 25px;
    font-weight: bold;
    margin: 10px 0;
}

.badges-contenedor {
    font-size: 19px;
    font-weight: bold;
    margin: 10px 0;
}

.badge {
    margin: 5px;
}

/* Proyectos */
.proyectos-recientes {
    padding: 40px;

}

.proyectos-recientes img {
   height: 100%; 
   width: 100%;
   padding: 10px;
   border-radius: 10px;
   display: block;
   transition: all 0.2s ease;
}

.proyectos-contenedor{
    padding-top: 60px;
    margin-bottom: 40px;
}

.overlay{
    transition: all 0.2s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
}

.overlay p {
    font-size: 25px;
    font-weight: bold;
    margin-bottom: 0;
}

.proyecto {
    position: relative;
}

.proyecto:hover img {
    opacity: 0.2;
}

.proyecto:hover .overlay {
    opacity: 1;
}

.overlay .iconos-contenedor {
    display: flex;
}

.overlay i {
    color: black;
    font-size: 60px;
    margin: 10px;
}

/* Contacto*/

.contacto .container {
    max-width: 1100px;
    min-height: 250px;
    padding: 15px 10px 15px 10px;
}

.contacto .rectangulo {
    margin-top: -3rem;
    background-color: rgb(13, 110, 253);
    border-radius: 10px;
    box-shadow: 0px 1px 4px 1px white;
}

.contacto .row {
    width: 100%;
    display: flex;
    align-items: center;
}

.contacto .descripcion {
    color: white;
    font-size: 1.2rem;   
}

.contacto button {
    color: white;
    font-weight: bold;
    background-color: transparent;
    border: 2px solid white;
    padding: 1.25em 2em;
    margin: 10px;
    border-radius: 100px;
    transition: all 0.2s ease-in-out;
}

.contacto button:hover{
    background-color: white;
    color:black;

}

.contacto button i {
    color: white;
    font-size: 1.3rem;
    transition: all 0.2s ease-in-out;
}

.contacto button:hover i {
    color: black;
}

/* footer */
footer {
    min-height: 500px;
}

.footer-logo {
    height: 80px;
    width: 80px;
    margin: 10px;
}

.footer-texto {
    font-size: 1.5rem;
    padding: 20px;
    margin-bottom: 30px;
    font-family: 'Quicksand', sans-serif;
}


.iconos-redes-sociales a{
    width: 50px;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
    margin: 10px;
    border: 2px solid white;
    border-radius: 50%;
    transition: all 0.2s ease-in;
}

.iconos-redes-sociales i {
    color:white;
    font-size: 1.5rem;
    transition: all 0.2s ease-in;
}

.iconos-redes-sociales a:hover {
    background-color: white;
    border: 2px solid rgb(13, 110, 253);
}

.iconos-redes-sociales a:hover i {
    color: black;
}

.derechos-de-autor {
    font-size: 15px;
    color: #aeaeae;
    padding: 20px;
}

/* Adaptable (Responsivo) */
@media screen and (max-width: 767px) {
    .navbar-brand{
        display: none;
    }
}


@media screen and (min-width:  700px) {
    .hero-inferior-imagen {
        max-width: 600px;
    }
}

